Tidied up fonts

--- a/dgs.sty
+++ b/dgs.sty
@@ -124,15 +124,20 @@
     BoldItalicFont  = *-boldit    
 ]{minionpro}
 \setmathsfont{Minion Math}                                  % change this
+%\setmonofont[
+%    Path            = fonts/ ,
+%    Extension       = .otf ,
+%    UprightFont     = *-regular ,
+%    BoldFont        = *-bold ,
+%    ItalicFont      = *-it ,
+%    BoldItalicFont  = *-boldit ,      
+%    Scale           = MatchLowercase,
+%]{sourcecodepro}
 \setmonofont[
-    Path            = fonts/ ,
-    Extension       = .otf ,
-    UprightFont     = *-regular ,
-    BoldFont        = *-bold ,
-    ItalicFont      = *-it ,
-    BoldItalicFont  = *-boldit ,      
-    Scale           = MatchLowercase,
-]{sourcecodepro}
+	Path			= fonts/ ,
+	Extension		= .otf ,
+	UprightFont		= *
+]{inconsolata}
 \setsansfont[
     Path            = fonts/ ,
     Extension       = .ttf ,
