--- a/sources/fks/31/autumn/1/current.tex
+++ b/sources/fks/31/autumn/1/current.tex
@@ -1,7 +1,7 @@
-\loadSeminar{fx}
+\loadSeminar{fks}
 \RenewDocumentCommand{\currentYear}{}{2015}
 \RenewDocumentCommand{\currentPart}{}{1}
-\RenewDocumentCommand{\currentSeries}{}{2}
+\RenewDocumentCommand{\currentSeries}{}{1}
 \RenewDocumentCommand{\currentDeadline}{}{11. 01. 2016}
 
 %this file will be generated automatically by Django
