--- a/sources/fks/31/autumn/1/solutions/01.tex
+++ b/sources/fks/31/autumn/1/solutions/01.tex
@@ -24,7 +24,7 @@ Konkrétne sa na ňu zavesí objekt, ktorého hmotnosť chceme merať, uvedie sa
 perióda jeho kmitov. Ak by sme chceli zistiť, aký je prevod medzi hmotnosťou a periódou,
 museli by sme vyriešiť pohybovú rovnicu
 $$m a(t) = -k x(t)\text{.}$$ 
-Jej riešenie je však pomerne známe, lebo ide jedná o~lineárny harmonický oscilátor,
+Jej riešenie je však pomerne známe, lebo ide o~lineárny harmonický oscilátor,
 ktorého perióda kmitov je
 $$T = 2 \pi \sqrt{\frac{m}{k}}$$
 a teda hmotnosť vieme vyjadriť ako
