Tidied up source folder

--- a/custom.tex
+++ b/custom.tex
@@ -72,7 +72,8 @@
             \vspace{4pt}
             {\Large \seminarFull}\\[4pt]
             {\large \romanNumeral{\currentContestYear}. ročník, \currentAcademicYear}\\[8pt]            
-            {\footnotesize \seminarShort,\ \seminarDepartmentShort\ FMFI~UK, Mlynská dolina, 842~48 Bratislava}\\[2pt]
+            {\footnotesize \seminarShort,\ \seminarDepartmentShort\ FMFI~UK,
+				Mlynská dolina, 842~48 Bratislava}\\[2pt]
             %{web:\quad\texttt{\seminarURL} \hspace{40pt} e-mail:\quad\texttt{\seminarEmail}}\\[8pt]
             \vspace{6pt}
         \end{minipage}        
