--- a/sources/fx/11/autumn/2/tasks/02.tex
+++ b/sources/fx/11/autumn/2/tasks/02.tex
@@ -9,7 +9,7 @@ nevedela dohodnúť, čo presne, a~tak sa na jednom kongrese rozhodla ustanoviť
 To bolo však ešte pred príchodom počítačov. Dnes má každý z~nás k~dispozícii výkonné stroje,
 takže si tento problém vieme vyriešiť sami.
 
-\insertPicture{02-hardspheres.png}{6cm}[Plyn tuhých sfér][]
+\insertPicture{02-hardspheres.png}{70mm}[Plyn tuhých sfér]
 
 Pri určitej kritickej hustote sa plyn tuhých diskov začne správať kvalitatívne inak -- skondenzuje.
 Čo to presne znamená a~pri akej hustote sa to udeje?
