Monstercommit. I know, I know.

--- a/core/config/dgs-config-ksp.sty
+++ b/core/config/dgs-config-ksp.sty
@@ -28,7 +28,7 @@
     \endswitch%
 }
 
-\RenewDocumentCommand{\formatTaskPoints}{O{} O{}}{%
+\RenewDocumentCommand{\formatTaskPoints}{m m}{%
     {%
         \normalsize%
         \ifstrequal{#1}{}{%
