--- a/core/templates/tasks.tex
+++ b/core/templates/tasks.tex
@@ -6,7 +6,7 @@
 \loadDocumentSettings
 \usepackage{core/dgs-custom}
 
-\RenewDocumentCommand{\currentFolder}{}{input/tasks}
+\RenewDocumentCommand{\currentFolder}{}{input}
 \newcounter{task}
  
 \begin{document}            
