Added fetching from repository, restructured, many minor fixes

--- a/core/dgs-custom.sty
+++ b/core/dgs-custom.sty
@@ -24,10 +24,10 @@
 \linespread{1.0}
 \setlength{\parindent}{0cm}
 \setlength{\parskip}{6pt}
-\setlength{\abovedisplayskip}{0mm}
-\setlength{\belowdisplayskip}{0mm}
-\setlength{\abovedisplayshortskip}{0mm}
-\setlength{\belowdisplayshortskip}{0mm}
+\setlength{\abovedisplayskip}{0pt plus 2pt minus 2pt}
+\setlength{\belowdisplayskip}{0pt plus 2pt minus 2pt}
+\setlength{\abovedisplayshortskip}{0pt plus 2pt minus 2pt}
+\setlength{\belowdisplayshortskip}{0pt plus 2pt minus 2pt}
 \setlength{\itemindent}{0pt}
 \setlength{\textfloatsep}{0mm}
 \setlength{\LTcapwidth}{0.8\textwidth}
