--- a/core/config/dgs-config-fx.sty
+++ b/core/config/dgs-config-fx.sty
@@ -9,7 +9,7 @@
 \RenewDocumentCommand{\seminarDepartmentFull}{}{Katedra teoretickej fyziky a didaktiky fyziky}
 \RenewDocumentCommand{\seminarEmail}{}{fx@fks.sk}
 \RenewDocumentCommand{\seminarFounded}{}{2005}
-\RenewDocumentCommand{\seminarTaskCount}{}{3}
+\RenewDocumentCommand{\seminarProblemCount}{}{3}
 
 % hyperref URL link colour
 \definecolor{color-link}{rgb}{0.6, 0.2, 0.1}
