More weird shit

--- a/core/config/dgs-config-ufo.sty
+++ b/core/config/dgs-config-ufo.sty
@@ -10,6 +10,8 @@
 \RenewDocumentCommand{\seminarDepartmentFull}{}{Katedra teoretickej fyziky a didaktiky fyziky}
 \RenewDocumentCommand{\seminarEmail}{}{otazky@fks.sk}
 \RenewDocumentCommand{\seminarFounded}{}{2007}
-\RenewDocumentCommand{\seminarTaskCount}{}{5}
+\RenewDocumentCommand{\seminarProblemCount}{}{5}
 
-\RenewDocumentCommand{\getTaskCategories}{m}{}
+\RenewDocumentCommand{\getProblemCategories}{m}{}
+
+\RenewDocumentCommand{\smallLogoRaise}{}{-4pt}
