--- a/core/templates/fks/invite-settings.tex
+++ b/core/templates/fks/invite-settings.tex
@@ -1,13 +1,17 @@
+\NewDocumentCommand{\seminarID}{fks}
+\NewDocumentCommand{\seminarShort}{FKS}
 \NewDocumentCommand{\seminarHead}{}{Dušan Kavický}
 \NewDocumentCommand{\seminarHeadEmail}{}{dusan@fks.sk}
+\NewDocumentCommand{\currentVolume}{}{31}
 \NewDocumentCommand{\accomodation}{}{ŠvP Horná Dolná}
 \NewDocumentCommand{\accomodationURL}{}{http://svphornadolna.sk/}
+\NewDocumentCommand{\recipientGender}{}{male}
 \NewDocumentCommand{\transportTo}{}{%
-    R1337 Zubatá & Košice & 18:54
-    R2345 Kosa & Bratislava & 17:16
+    R1337 Zubatá & Košice & 18:54 \\
+    R2345 Kosa & Bratislava & 17:16 \\
 }
 \NewDocumentCommand{\transportBack}{}{%
-    R1337 Zubatá & Košice & 18:54
-    R2345 Kosa & Bratislava & 17:16
+    R1337 Zubatá & Košice & 18:54 \\
+    R2345 Kosa & Bratislava & 17:16 \\
 }
 \NewDocumentCommand{\recipientGender}{}{male}
