--- a/core/templates/fks/invite.tex
+++ b/core/templates/fks/invite.tex
@@ -1,7 +1,7 @@
 Mil\genderSwitch{ý}{á} riešiteľ\genderSwitch{}{ka},
 
 v~korešpondenčnej časti si dosiah\genderSwitch{ol}{la} výborné výsledky, gratulujeme a~týmto Ťa pozývame ako
-\ucastnik\ na \sezona\ sústredenie \currentSeminar. Prosím, pošli návratku čo najrýchlejšie \emph{a to aj v~prípade, že na sústredenie neprídeš}.
+\participantTypeAccusative na \currentVolume . sústredenie \currentSeminar. Prosím, pošli návratku čo najrýchlejšie \emph{a to aj v~prípade, že na sústredenie neprídeš}.
 
 \section{Informácie}
 
