--- a/core/dgs.sty
+++ b/core/dgs.sty
@@ -132,6 +132,19 @@
     BoldItalicFont  = *-bi    
 ]{verdana}
 
+\makeatletter                                               % handler na chybu v mathspec, aby fonty v URL obsahovali monospace čísla
+    \DeclareMathSymbol{0}{\mathalpha}{\eu@DigitsArabic@symfont}{`0}
+    \DeclareMathSymbol{1}{\mathalpha}{\eu@DigitsArabic@symfont}{`1}
+    \DeclareMathSymbol{2}{\mathalpha}{\eu@DigitsArabic@symfont}{`2}
+    \DeclareMathSymbol{3}{\mathalpha}{\eu@DigitsArabic@symfont}{`3}
+    \DeclareMathSymbol{4}{\mathalpha}{\eu@DigitsArabic@symfont}{`4}
+    \DeclareMathSymbol{5}{\mathalpha}{\eu@DigitsArabic@symfont}{`5}
+    \DeclareMathSymbol{6}{\mathalpha}{\eu@DigitsArabic@symfont}{`6}
+    \DeclareMathSymbol{7}{\mathalpha}{\eu@DigitsArabic@symfont}{`7}
+    \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
+    \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
+\makeatother
+
 \RequirePackage{boolexpr}                                   % boolean expressions, switch
 \RequirePackage{core/dgs-utils}
 
@@ -192,10 +205,10 @@
     \begin{figure}[H]%
         \centering%
         \IfFileExists{\currentDir/\currentProblem/#1.#2}{%
-			\includegraphics[keepaspectratio = true, height = #4]{\currentDir/\currentProblem/#1}%
-		}{%
-			\includegraphics[keepaspectratio = true, height = #4]{example-image-a}%
-		}%
+            \includegraphics[keepaspectratio = true, height = #4]{\currentDir/\currentProblem/#1}%
+        }{%
+            \includegraphics[keepaspectratio = true, height = #4]{example-image-a}%
+        }%
         \ifstrempty{#5}{}{\caption{\textit{#5}}}%
         \ifstrempty{#6}{}{\label{#6}}%
     \end{figure}%
